--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,14 @@
 ---
 type: page
-title: Home
+title: '~'
 description: Home page Portfolio -- Rohan
 tags:
   - Blog
   - About
   - Rohan
+  - Projects
+  - work
+  - project
 author: Rohan Kambli
 ---
 
@@ -21,23 +24,78 @@ export const age = new Date().getYear() - new Date('November 27, 2002').getYear(
 
 <Globe />
 
-# <span title="">Rohan Kambli</span>
+# <span title="रोहन">Rohan Kambli</span>
+
 
 [`@`](mailto:rohanrk39357@gmail.com) · [`/github`](https://github.com/rohannrk) · [`/linkedin`](https://linkedin.com/in/rohanrk) · [`/twitter`](https://twitter.com/in/rohannrk) · [`/resume`](https://drive.google.com/file/d/1lXQrsCCuciPhsfk2h60BLoI9yLS6JtHk/view?usp=sharing)
 
+
 ◕ ◡ ◕ っ Hi, I'm Rohan! I'm a {age} y/o student from Mumbai, India passionate about **Digital Design** and **Development**.
 
-#### <mark>Present</mark>
+---
 
-Right now, I'm tinkering with impactful JavaScript tooling to enhance UX + DX. Currently exploring how compilation can augment JavaScript UI libraries through <Link href="/work/million-js"><strong>🦁 Million.js</strong></Link>.
+### [**Projects**](/projects)
 
-In the summer of 2022, I'll be interning at [**▲ Vercel**](https://vercel.com/) to help work on projects in the [Next.js](https://nextjs.org/) ecosystem and learn more about the bleeding _edge_ of web development.
+<project>
+#### LinkCollect - Social bookmarking platform
+![Link-collect](/images/linkcollect.png)
+Linkcollect.io is the perfect platform to save, collect and share links with your friends faster and easier.
+\
+[Figma](https://www.figma.com/file/JAXUNquuter77144MFtulq/%F0%9F%94%97-LinkCollect---V1-and-V2?type=design&node-id=1510%3A7&mode=design&t=joKXA1hFAfZlucpl-1) . [Github](https://github.com/linkcollect) . [Live](https://linkcollect.io/)
+</project>
 
-#### <mark>Previously</mark>
+{/* <project>
+#### Discord Clone - Chat app (Coming soon)
+![discord-clone](/images/discord-clone.png)
+Full Stack Airbnb Clone with Next.js 13 App Router: React, Tailwind, Prisma, MongoDB, NextAuth.
+\
+[Github](https://github.com/rohannrk/discord-clone) . [Live](https://propertyrental-a9edyimfl-rohannrk.vercel.app/)
+</project> */}
 
-I won the **2nd place** grand award in Systems Software at the [2021 International Science and Engineering Fair (ISEF)](https://www.societyforscience.org/press-release/2021-regeneron-isef-grand-awards/#:~:text=SOFT031%20%E2%80%94%20Lucia%3A%20Creating,States%20of%20America) with <Link href="/work/lucia-js"><strong>🙋‍♀️ Lucia.js</strong></Link> out of **1.8k+ students** around the world.
+<project>
+#### Airbnb Clone - Travel accomodation
+![Airbnb-clone](/images/airbnb-clone.png)
+Full Stack Airbnb Clone with Next.js 13 App Router: React, Tailwind, Prisma, MongoDB, NextAuth.
+\
+[Github](https://github.com/rohannrk/airbnb) . [Live](https://propertyrental-a9edyimfl-rohannrk.vercel.app/)
+</project>
 
-I pioneered [**🧠 KBowl**](https://kbowl.aidenybai.com) (virtual [Knowledge Bowl](https://en.wikipedia.org/wiki/Knowledge_Bowl) events) during the COVID-19 lockdown. I helped organize the K-12 leagues for Washington State, consisting of **30+ schools, 40+ teachers and 1k+ students**, throughout 2020 and 2021.
+---
+### [**Work**](/work)
+
+<work>
+#### - LinkCollect - Social bookmarking platform
+![Link-collect](/images/linkcollect.png)
+As a Digital designer and Developer for linkcollect, my role
+encompassed developing a functional and visually captivating visual
+identity. This involved creating a style guide and design system from
+the ground up, ensuring consistency throughout the linkcollect
+extension and Dashboard. Additionally, I handled the task of responsive
+design and prototyping to deliver a seamless user experience across
+various devices.
+\
+[Figma](https://www.figma.com/file/JAXUNquuter77144MFtulq/%F0%9F%94%97-LinkCollect---V1-and-V2?type=design&node-id=1510%3A7&mode=design&t=joKXA1hFAfZlucpl-1) . [Github](https://github.com/linkcollect) . [Live](https://linkcollect.io/)
+</work>
+
+<work>
+#### - Hack This Fall - Innovate for good
+![Hackthifall](/images/hackthisfall.png)
+Part of design team at Hack This Fall.
+\
+[Live](https://hackthisfall.tech/)
+</work>
+
+<work>
+#### - Freelance - Designer and developer
+Worked with various early staged startups and SAAS businesses like
+Dygnify-Defi, Mny-fintech, Ticketh-Web3 event management, Chalak-
+Agritech to craft visual identity and delightful user experiences that
+align with business goals.
+</work>
+
+
+
+
 
 #### <mark>🎶🎸🤠</mark>
 
