--- a/pages/blogs/Coming soon.mdx
+++ b/pages/blogs/Coming soon.mdx
@@ -1,4 +1,6 @@
----
+Coming soon
+
+{/* ---
 title: Markdown Examples
 date: 2021/3/19
 description: View examples of all possible Markdown options.
@@ -96,4 +98,4 @@ export default function Nextra({ Component, pageProps }) {
 
     and multiple paragraphs.
 
-[^2]: Footnote text.
+[^2]: Footnote text. */}
