--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -93,11 +93,8 @@ Agritech to craft visual identity and delightful user experiences that
 align with business goals.
 </work>
 
-
-
-
+---
 
 #### <mark>🎶🎸🤠</mark>
-
-I like blasting music with my windows down on the highway (_88rising ( ´Д`)ﾉ_), design, poetry, cycling, and binging boba popsicles. My favorite song is [_sunkissed_ · khai dreams](https://www.youtube.com/watch?v=uSkd4NC1kqY).
+I like blasting music with my windows down on the highway (_88rising ( ´Д`)ﾉ_), design, poetry, cycling, and binging boba popsicles.
 
