--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -5,7 +5,7 @@ title: About
 
 ![](/images/sunset-pixel.gif)
 
-Hi, I'm Rohan! I'm a 21 y/o student from Mumbai, India passionate about **Digital Design** and **Development**. I love designing and building side projects. Whenever I'm not working you'll find me watching anime, chasing nature, reading books, listening to [music](https://open.spotify.com/user/2g78prniwnob6e44but33jbyq?si=20c57940da4341ae) or clicking [photos](https://instagram.com/ni5arga). 
+Hi, I'm Rohan! I'm a 21 y/o student from Mumbai, India passionate about **Digital Design** and **Development**. I love designing and building side projects. Whenever I'm not working you'll find me watching anime, chasing nature, reading books, listening to music or clicking [photos](https://www.instagram.com/rohannrk/). 
 
 ## Tech stack
 - Programming Languages: Java, HTML, CSS, React, Javascript, Typescript.
