--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -27,7 +27,7 @@ export const age = new Date().getYear() - new Date('November 27, 2002').getYear(
 # <span title="रोहन">Rohan Kambli</span>
 
 
-[`@`](mailto:rohanrk39357@gmail.com) · [`/github`](https://github.com/rohannrk) · [`/linkedin`](https://linkedin.com/in/rohanrk) · [`/twitter`](https://twitter.com/in/rohannrk) · [`/resume`](https://drive.google.com/file/d/1lXQrsCCuciPhsfk2h60BLoI9yLS6JtHk/view?usp=sharing)
+[`@`](mailto:rohanrk39357@gmail.com) · [`/github`](https://github.com/rohannrk) · [`/linkedin`](https://linkedin.com/in/rohanrk) · [`/twitter`](https://twitter.com/rohannrk) · [`/resume`](https://drive.google.com/file/d/1lXQrsCCuciPhsfk2h60BLoI9yLS6JtHk/view?usp=sharing)
 
 
 ◕ ◡ ◕ っ Hi, I'm Rohan! I'm a {age} y/o student from Mumbai, India passionate about **Digital Design** and **Development**.
