--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -14,13 +14,13 @@ Linkcollect.io is the perfect platform to save, collect and share links with you
 [Figma](https://www.figma.com/file/JAXUNquuter77144MFtulq/%F0%9F%94%97-LinkCollect---V1-and-V2?type=design&node-id=1510%3A7&mode=design&t=joKXA1hFAfZlucpl-1) . [Github](https://github.com/linkcollect) . [Live](https://linkcollect.io/)
 </project>
 
-{/* <project>
-#### Discord Clone - Chat app (Coming soon)
+<project>
+#### Discord Clone - Chat app
 ![discord-clone](/images/discord-clone.png)
-Full Stack Airbnb Clone with Next.js 13 App Router: React, Tailwind, Prisma, MongoDB, NextAuth.
+Full Stack Discord clone with Next.js 13 App Router: React, Typescript, Tailwind, Prisma, SQL, Clerk for auth.
 \
-[Github](https://github.com/rohannrk/discord-clone) . [Live](https://propertyrental-a9edyimfl-rohannrk.vercel.app/)
-</project> */}
+[Github](https://github.com/rohannrk/discord-clone) . [Live](https://discord-clone-production-3fac.up.railway.app/)
+</project>
 
 <project>
 #### Airbnb Clone - Travel accomodation
