--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -5,24 +5,22 @@ title: About
 
 ![](/images/sunset-pixel.gif)
 
-Hi, I'm Rohan! I'm a 21 y/o student from Mumbai, India passionate about **Digital Design** and **Development**. I love designing and building side projects. Whenever I'm not working you'll find me watching anime, chasing nature, reading books, listening to music or clicking [photos](https://www.instagram.com/rohannrk/). 
+export const age = new Date().getYear() - new Date('March 8, 2002').getYear();
+
+
+Yo, I'm Aliasgar! I'm a {age} y/o Developer from Mumbai, India passionate about **Coding** and **Development**. I love coding and building side projects. Whenever I'm not working you'll find me listening to music, travelling, reading books, playing cricket or talking about F1 :). 
 
 ## Tech stack
-- Programming Languages: Java, HTML, CSS, React, Javascript, Typescript.
-- Frameworks: NextJS, ExpressJS, Tailwind, GSAP, Framer.
-- Tools: GitHub, Git, Vercel, Visual Studio Code, Figma.
+- Programming Languages: C++, Python, Javascript, Typescript.
+- Technolgoies: NextJS, ExpressJS, Tailwind, NodeJS, PHP, Laravel, Redux.
+- Tools: GitHub, Git, Vercel, Visual Studio Code, Prisma, Postman.
 - Databases: MongoDB, SQL
-- Technologies & Other Skills: Digital design, Frontend and Creative development,
-
-
-### What do I build?
-I like to work on mainly Design and Frontend of the project. If you want to check out my open source projects, feel free to stalk my [GitHub](https://github.com/rohannrk).
 
 ### What IDE do I use?
 Visual Studio Code.
 
 ### What softwares do I use daily?
-Figma, Visual Studio Code, Instagram, Slack, Discord, WhatsApp, Telegram, GitHub and others.
+Visual Studio Code, Instagram, Slack, Discord, WhatsApp, Telegram, GitHub, Postman and others.
 
 ## What are your hobbies?
-Reading, Coding, Designing, Listening to music, Chess, Photography, Watching Anime.
+Reading, Coding, Cricket, F1, Listening to music, Watching Movies.
