--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,15 +1,15 @@
 ---
 type: page
 title: '~'
-description: Home page Portfolio -- Rohan
+description: Home page Portfolio -- Aliasgar
 tags:
   - Blog
   - About
-  - Rohan
+  - Aliasgar
   - Projects
   - work
   - project
-author: Rohan Kambli
+author: Aliasgar Fatakdawala
 ---
 
 import Head from 'next/head';
@@ -17,84 +17,104 @@ import Globe from '../components/Globe';
 import Link from 'next/link';
 
 <Head>
-  <title>Rohan Kambli</title>
+  <title>Aliasgar Fatakdawala</title>
 </Head>
 
-export const age = new Date().getYear() - new Date('November 27, 2002').getYear();
+export const age = new Date().getYear() - new Date('March 8, 2002').getYear();
 
 <Globe />
 
-# <span title="रोहन">Rohan Kambli</span>
+# <span title="अलीअसगर">Aliasgar Fatakdawala</span>
 
 
-[`@`](mailto:rohanrk39357@gmail.com) · [`/github`](https://github.com/rohannrk) · [`/linkedin`](https://linkedin.com/in/rohanrk) · [`/twitter`](https://twitter.com/rohannrk) · [`/resume`](https://drive.google.com/file/d/1lXQrsCCuciPhsfk2h60BLoI9yLS6JtHk/view?usp=sharing)
+[`@`](mailto:aliasgardf@gmail.com) · [`/github`](https://github.com/aliasgar45) · [`/linkedin`](https://www.linkedin.com/in/aliasgar-fatakdawala/) · [`/twitter`](https://twitter.com/aliasgar4508) · [`/resume`](https://drive.google.com/file/d/105h-4OnCBQvpmJWjc7nJl_cXINTfKbdm/view?pli=1)
 
 
-◕ ◡ ◕ っ Hi, I'm Rohan! I'm a {age} y/o student from Mumbai, India passionate about **Digital Design** and **Development**.
+◕ ◡ ◕ っ Hi, I'm Aliasgar! I'm a {age} y/o Developer from Mumbai, India passionate about **Coding** and **Development**.
+
+---
+### [**Work**](/work)
+
+<work>
+### - Lucify 
+###### Role : Full Stack Developer
+###### Duration : Nov 2023 - Present 
+Collaborating with a team of four developers in creating their product from
+scratch.
+Collaborated closely with the design team to integrate innovative features for a
+user-centric experience.
+Contributed across the full development spectrum, fostering collaboration and
+delivering a market-ready product.
+</work>
+
+<work>
+### - Gee Kay Group of Companies 
+###### Role : Full Stack Developer Intern
+###### Duration : Aug 2022 - Oct 2023 (1.2yrs)
+Developed and implemented responsive user interfaces forthe company,
+enhancing user engagement and simplifying invoice management.
+Contributed to the front-end development of an application for one of the
+leading domestic airlines of India, focusing on GST management.
+Led a team of 2 developers forthe GeeKay Certificate Application.
+Managed to save time of user by 50% by implementing advanced front-end
+features such as Pagination and Dynamic Forms.
+</work>
 
 ---
 
 ### [**Projects**](/projects)
 
 <project>
-#### LinkCollect - Social bookmarking platform
-![Link-collect](/images/linkcollect.png)
-Linkcollect.io is the perfect platform to save, collect and share links with your friends faster and easier.
+#### E-commerce Store
+![E-Commerce Store](https://user-images.githubusercontent.com/91747704/265995733-ef21dc6b-eff6-4439-b3cb-bce00c7085cd.png)
+Developed a high-performance e-commerce platform ensuring a smooth and engaging user experience. Implemented robust data management and seamless database connectivity, enhancing inventory tracking and order processing. Implemented filtering based on each product’s color and size and a preview box for each product. Integrated Stripe for smooth payment processing for each order.
 \
-[Figma](https://www.figma.com/file/JAXUNquuter77144MFtulq/%F0%9F%94%97-LinkCollect---V1-and-V2?type=design&node-id=1510%3A7&mode=design&t=joKXA1hFAfZlucpl-1) . [Github](https://github.com/linkcollect) . [Live](https://linkcollect.io/)
+[Github](https://github.com/aliasgar45/ecommerce-store/) . [Live](https://ecommerce-store-eight-beryl.vercel.app/)
 </project>
 
 <project>
-#### Discord Clone - Chat app
-![discord-clone](/images/discord-clone.png)
-Full Stack Discord clone with Next.js 13 App Router: React, Typescript, Tailwind, Prisma, SQL, Clerk for auth.
+#### Content Management System for E-commerce store
+![CMS](https://user-images.githubusercontent.com/91747704/265996359-7a1dacd4-3177-411e-819d-699dd197a176.png)
+Developed an advanced e-commerce Content Management System (CMS) , providing a dynamic and intuitive platform for managing product listings and content.Implemented features that help in efficient content updates, and inventory management ensuring a streamlined e-commerce operation. Created a responsive and user-friendly interface, allowing effortless content customization and real-time updates, enhancing overall website performance and customer engagement.
 \
-[Github](https://github.com/rohannrk/discord-clone) . [Live](https://discord-clone-production-3fac.up.railway.app/)
+[Github](https://github.com/aliasgar45/ecommerce-admin) . [Live](https://ecommerce-admin-ten-chi.vercel.app/)
 </project>
 
 <project>
 #### Airbnb Clone - Travel accomodation
-![Airbnb-clone](/images/airbnb-clone.png)
-Full Stack Airbnb Clone with Next.js 13 App Router: React, Typescript, Tailwind, Prisma, MongoDB, Clerk for Auth.
+![Airbnb-clone](https://user-images.githubusercontent.com/91747704/266032073-e69a3e8a-e2ac-46b3-811c-91b37200e07b.png)
+Developed a cutting-edge Airbnb booking platform delivering an intuitive and immersive booking experience fortravelers.Added features for efficient data storage and management, enabling seamless property listings and dynamic availability tracking, ensuring a robust and scalable booking system. Developed a user-centric interface with integrated mapping features, simplifying property discovery and facilitating a smooth booking process, ultimately enhancing user engagement and customer satisfaction.
 \
-[Github](https://github.com/rohannrk/airbnb) . [Live](https://propertyrental-a9edyimfl-rohannrk.vercel.app/)
+[Github](https://github.com/aliasgar45/booking-app) . [Live](https://booking-pdctb40ub-aliasgar45.vercel.app/)
+</project>
+
+<project>
+#### AliNote - A Note Keeper
+![Alinote](https://user-images.githubusercontent.com/91747704/266033545-4ed5e954-241f-4c10-898f-cb198f1178ee.png)
+Made a Note Maker App similar to Google Keep to make notes for keeping a track of tasks to be done.Notes can be added with a title and a body.Notes can be pinned based on priority.Notes can be added to trash and a whole trash page is made to see all the deleted notes.
+\
+[Github](https://github.com/aliasgar45/alinote) . [Live](https://alinote.vercel.app/)
+</project>
+
+<project>
+#### HackFormers
+![HackFormers](https://user-images.githubusercontent.com/91747704/266052570-dcdf0ad1-693c-4232-b2ce-548d725ab306.png)
+Developed a cutting-edge Airbnb booking platform delivering an intuitive and immersive booking experience fortravelers.Added features for efficient data storage and management, enabling seamless property listings and dynamic availability tracking, ensuring a robust and scalable booking system. Developed a user-centric interface with integrated mapping features, simplifying property discovery and facilitating a smooth booking process, ultimately enhancing user engagement and customer satisfaction.
+\
+ [Live](https://www.avalontechfest.tech/hackformers)
+</project>
+
+<project>
+#### Youtube Video Player
+![Youtube](https://user-images.githubusercontent.com/91747704/266047531-08700806-f9af-41b4-b254-e5e714cbfd67.png)
+Developed a feature-rich YouTube video player using ReactJS, showcasing my proficiency in front-end web development. This project demonstrates my ability to create interactive and responsive web components, enhancing user experiences. Check out my GitHub repository for a closer look at this project and other examples of my coding skills.
+\
+[Github](https://github.com/aliasgar45/youtube-video-player) . [Live](https://youtube-video-player-xi.vercel.app/)
 </project>
 
 ---
-### [**Work**](/work)
 
-<work>
-#### - LinkCollect - Social bookmarking platform
-![Link-collect](/images/linkcollect.png)
-As a Digital designer and Developer for linkcollect, my role
-encompassed developing a functional and visually captivating visual
-identity. This involved creating a style guide and design system from
-the ground up, ensuring consistency throughout the linkcollect
-extension and Dashboard. Additionally, I handled the task of responsive
-design and prototyping to deliver a seamless user experience across
-various devices.
-\
-[Figma](https://www.figma.com/file/JAXUNquuter77144MFtulq/%F0%9F%94%97-LinkCollect---V1-and-V2?type=design&node-id=1510%3A7&mode=design&t=joKXA1hFAfZlucpl-1) . [Github](https://github.com/linkcollect) . [Live](https://linkcollect.io/)
-</work>
-
-<work>
-#### - Hack This Fall - Innovate for good
-![Hackthifall](/images/hackthisfall.png)
-Part of design team at Hack This Fall.
-\
-[Live](https://hackthisfall.tech/)
-</work>
-
-<work>
-#### - Freelance - Designer and developer
-Worked with various early staged startups and SAAS businesses like
-Dygnify-Defi, Mny-fintech, Ticketh-Web3 event management, Chalak-
-Agritech to craft visual identity and delightful user experiences that
-align with business goals.
-</work>
-
----
 
 #### <mark>🎶🎸🤠</mark>
-I like blasting music with my windows down on the highway (_88rising ( ´Д`)ﾉ_), design, poetry, cycling, and binging boba popsicles.
+I like blasting music with my windows down on the highway (_88rising ( ´Д`)ﾉ_), cricket, F1, travelling, and coffeeee.
 
