--- a/pages/work.mdx
+++ b/pages/work.mdx
@@ -7,31 +7,26 @@ tag: work
 My Work
 
 <work>
-#### - LinkCollect - Social bookmarking platform
-![Link-collect](/images/linkcollect.png)
-As a Digital designer and Developer for linkcollect, my role
-encompassed developing a functional and visually captivating visual
-identity. This involved creating a style guide and design system from
-the ground up, ensuring consistency throughout the linkcollect
-extension and Dashboard. Additionally, I handled the task of responsive
-design and prototyping to deliver a seamless user experience across
-various devices.
-\
-[Figma](https://www.figma.com/file/JAXUNquuter77144MFtulq/%F0%9F%94%97-LinkCollect---V1-and-V2?type=design&node-id=1510%3A7&mode=design&t=joKXA1hFAfZlucpl-1) . [Github](https://github.com/linkcollect) . [Live](https://linkcollect.io/)
+### - Lucify 
+###### Role : Full Stack Developer
+###### Duration : Nov 2023 - Present 
+Collaborating with a team of four developers in creating their product from
+scratch.
+Collaborated closely with the design team to integrate innovative features for a
+user-centric experience.
+Contributed across the full development spectrum, fostering collaboration and
+delivering a market-ready product.
 </work>
 
 <work>
-#### - Hack This Fall - Innovate for good
-![Hackthifall](/images/hackthisfall.png)
-Part of design team at Hack This Fall.
-\
-[Live](https://hackthisfall.tech/)
-</work>
-
-<work>
-#### - Freelance - Designer and developer
-Worked with various early staged startups and SAAS businesses like
-Dygnify-Defi, Mny-fintech, Ticketh-Web3 event management, Chalak-
-Agritech to craft visual identity and delightful user experiences that
-align with business goals.
+### - Gee Kay Group of Companies 
+###### Role : Full Stack Developer Intern
+###### Duration : Aug 2022 - Oct 2023 (1.2yrs)
+Developed and implemented responsive user interfaces forthe company,
+enhancing user engagement and simplifying invoice management.
+Contributed to the front-end development of an application for one of the
+leading domestic airlines of India, focusing on GST management.
+Led a team of 2 developers forthe GeeKay Certificate Application.
+Managed to save time of user by 50% by implementing advanced front-end
+features such as Pagination and Dynamic Forms.
 </work>
