--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -6,26 +6,51 @@ tag: project
 
 My Projects
 
+
 <project>
-#### LinkCollect - Social bookmarking platform
-![Link-collect](/images/linkcollect.png)
-Linkcollect.io is the perfect platform to save, collect and share links with your friends faster and easier.
+#### E-commerce Store
+![E-Commerce Store](https://user-images.githubusercontent.com/91747704/265995733-ef21dc6b-eff6-4439-b3cb-bce00c7085cd.png)
+Developed a high-performance e-commerce platform ensuring a smooth and engaging user experience. Implemented robust data management and seamless database connectivity, enhancing inventory tracking and order processing. Implemented filtering based on each product’s color and size and a preview box for each product. Integrated Stripe for smooth payment processing for each order.
 \
-[Figma](https://www.figma.com/file/JAXUNquuter77144MFtulq/%F0%9F%94%97-LinkCollect---V1-and-V2?type=design&node-id=1510%3A7&mode=design&t=joKXA1hFAfZlucpl-1) . [Github](https://github.com/linkcollect) . [Live](https://linkcollect.io/)
+[Github](https://github.com/aliasgar45/ecommerce-store/) . [Live](https://ecommerce-store-eight-beryl.vercel.app/)
 </project>
 
 <project>
-#### Discord Clone - Chat app
-![discord-clone](/images/discord-clone.png)
-Full Stack Discord clone with Next.js 13 App Router: React, Typescript, Tailwind, Prisma, SQL, Clerk for auth.
+#### Content Management System for E-commerce store
+![CMS](https://user-images.githubusercontent.com/91747704/265996359-7a1dacd4-3177-411e-819d-699dd197a176.png)
+Developed an advanced e-commerce Content Management System (CMS) , providing a dynamic and intuitive platform for managing product listings and content.Implemented features that help in efficient content updates, and inventory management ensuring a streamlined e-commerce operation. Created a responsive and user-friendly interface, allowing effortless content customization and real-time updates, enhancing overall website performance and customer engagement.
 \
-[Github](https://github.com/rohannrk/discord-clone) . [Live](https://discord-clone-production-3fac.up.railway.app/)
+[Github](https://github.com/aliasgar45/ecommerce-admin) . [Live](https://ecommerce-admin-ten-chi.vercel.app/)
 </project>
 
 <project>
 #### Airbnb Clone - Travel accomodation
-![Airbnb-clone](/images/airbnb-clone.png)
-Full Stack Airbnb Clone with Next.js 13 App Router: React, Tailwind, Prisma, MongoDB, NextAuth.
+![Airbnb-clone](https://user-images.githubusercontent.com/91747704/266032073-e69a3e8a-e2ac-46b3-811c-91b37200e07b.png)
+Developed a cutting-edge Airbnb booking platform delivering an intuitive and immersive booking experience fortravelers.Added features for efficient data storage and management, enabling seamless property listings and dynamic availability tracking, ensuring a robust and scalable booking system. Developed a user-centric interface with integrated mapping features, simplifying property discovery and facilitating a smooth booking process, ultimately enhancing user engagement and customer satisfaction.
 \
-[Github](https://github.com/rohannrk/airbnb) . [Live](https://propertyrental-a9edyimfl-rohannrk.vercel.app/)
+[Github](https://github.com/aliasgar45/booking-app) . [Live](https://booking-pdctb40ub-aliasgar45.vercel.app/)
+</project>
+
+<project>
+#### AliNote - A Note Keeper
+![Alinote](https://user-images.githubusercontent.com/91747704/266033545-4ed5e954-241f-4c10-898f-cb198f1178ee.png)
+Made a Note Maker App similar to Google Keep to make notes for keeping a track of tasks to be done.Notes can be added with a title and a body.Notes can be pinned based on priority.Notes can be added to trash and a whole trash page is made to see all the deleted notes.
+\
+[Github](https://github.com/aliasgar45/alinote) . [Live](https://alinote.vercel.app/)
+</project>
+
+<project>
+#### HackFormers
+![HackFormers](https://user-images.githubusercontent.com/91747704/266052570-dcdf0ad1-693c-4232-b2ce-548d725ab306.png)
+Developed a cutting-edge Airbnb booking platform delivering an intuitive and immersive booking experience fortravelers.Added features for efficient data storage and management, enabling seamless property listings and dynamic availability tracking, ensuring a robust and scalable booking system. Developed a user-centric interface with integrated mapping features, simplifying property discovery and facilitating a smooth booking process, ultimately enhancing user engagement and customer satisfaction.
+\
+ [Live](https://www.avalontechfest.tech/hackformers)
+</project>
+
+<project>
+#### Youtube Video Player
+![Youtube](https://user-images.githubusercontent.com/91747704/266047531-08700806-f9af-41b4-b254-e5e714cbfd67.png)
+Developed a feature-rich YouTube video player using ReactJS, showcasing my proficiency in front-end web development. This project demonstrates my ability to create interactive and responsive web components, enhancing user experiences. Check out my GitHub repository for a closer look at this project and other examples of my coding skills.
+\
+[Github](https://github.com/aliasgar45/youtube-video-player) . [Live](https://youtube-video-player-xi.vercel.app/)
 </project>
