--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -11,10 +11,10 @@ export const age = new Date().getYear() - new Date('March 8, 2002').getYear();
 Yo, I'm Aliasgar! I'm a {age} y/o Developer from Mumbai, India passionate about **Coding** and **Development**. I love coding and building side projects. Whenever I'm not working you'll find me listening to music, travelling, reading books, playing cricket or talking about F1 :). 
 
 ## Tech stack
-- Programming Languages: C++, Python, Javascript, Typescript.
-- Technolgoies: NextJS, ExpressJS, Tailwind, NodeJS, PHP, Laravel, Redux.
-- Tools: GitHub, Git, Vercel, Visual Studio Code, Prisma, Postman.
-- Databases: MongoDB, SQL
+- Programming Languages: C++, JavaScript, TypeScript, Python, Dart.
+- Technolgoies: React, Next.js, Node.js, Express, Angular, Flutter, PHP, Laravel.
+- Tools: MySQL, MongoDB, Prisma.
+- Databases: Git, Tailwind CSS, Postman, Stripe.
 
 ### What IDE do I use?
 Visual Studio Code.
@@ -23,4 +23,4 @@ Visual Studio Code.
 Visual Studio Code, Instagram, Slack, Discord, WhatsApp, Telegram, GitHub, Postman and others.
 
 ## What are your hobbies?
-Reading, Coding, Cricket, F1, Listening to music, Watching Movies.
+Aviation, Reading, Coding, Cricket, F1, Listening to music, Watching Movies.
