--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -26,32 +26,51 @@ export const age = new Date().getYear() - new Date("March 8, 2002").getYear();
 
 # <span title="अलीअसगर">Aliasgar Fatakdawala</span>
 
-[`@`](mailto:aliasgardf@gmail.com) · [`/github`](https://github.com/aliasgar45) · [`/linkedin`](https://www.linkedin.com/in/aliasgar-fatakdawala/) · [`/twitter`](https://twitter.com/aliasgar4508) · [`/resume`](https://drive.google.com/file/d/1akj37d1KnyZLZu_ngeb4Pxbaj53qmrLg/view?usp=drive_link)
+[`@`](mailto:aliasgardf@gmail.com) · [`/github`](https://github.com/aliasgar45) · [`/linkedin`](https://www.linkedin.com/in/aliasgar-fatakdawala/) · [`/twitter`](https://twitter.com/aliasgar4508) · [`/resume`](https://drive.google.com/file/d/1o3dApy9nMUDPXkZ6gRVeZqXQ7rY0D1Bo/view?usp=sharing)
 
 ◕ ◡ ◕ っ Hi, I'm Aliasgar! I'm a {age} y/o Developer from Mumbai, India passionate about **Coding** and **Development**.
 
 ---
 
 ### [**Work**](/work)
+<work>
+  ### Urbanaut
+  ##### Role : Front End Developer
+  ###### Duration : Oct 2024 - Present
+•  Collaborated closely with designers and stakeholders to build interactive Angular-based UIs, contributing to a
+noticeable increase in user engagement.<br/>
+• Built and shipped a new landing page and a custom CRM dashboard from scratch, reducing manual content tasks
+by 30%<br/>
+• Enhanced event management and booking systems, improving page load speed by 25% and streamlining user workflows.<br/>
+• Actively participated in product discussions, feature planning, and rapid delivery cycles in a fast-paced early-stage
+startup environment.<br/>
+</work>
+
 
 <work>
-  ### - Lucify ###### Role : Full Stack Developer ###### Duration : Nov 2023 -
-  Present Collaborating with a team of four developers in creating their product
-  from scratch. Collaborated closely with the design team to integrate
-  innovative features for a user-centric experience. Contributed across the full
-  development spectrum, fostering collaboration and delivering a market-ready
-  product.
+  ### Lucify
+  ##### Role : Full Stack Developer
+  ###### Duration : Nov 2023 - Sept 2024
+• Joined as one of the first engineers and built a full-stack hotel operations platform from scratch using React and
+Node.js, covering room service, food ordering, and guest check-ins.<br/>
+• Designed the complete backend architecture and database schema to support scalable hotel workflows and internal
+operations.<br/>
+• Collaborated with designers and product teams to build intuitive interfaces and contributed to product discussions,
+feature planning, and fast-paced delivery cycles.<br/>
+• Migrated the platform to Flutter, launching cross-platform mobile apps that improved accessibility and increased mobile
+adoption by 15%.<br/>
 </work>
 
 <work>
-  ### - Gee Kay Group of Companies ###### Role : Full Stack Developer Intern
-  ###### Duration : Aug 2022 - Oct 2023 (1.2yrs) Developed and implemented
-  responsive user interfaces forthe company, enhancing user engagement and
-  simplifying invoice management. Contributed to the front-end development of an
-  application for one of the leading domestic airlines of India, focusing on GST
-  management. Led a team of 2 developers forthe GeeKay Certificate Application.
-  Managed to save time of user by 50% by implementing advanced front-end
-  features such as Pagination and Dynamic Forms.
+  ### Gee Kay Group of Companies 
+  ###### Role : Full Stack Developer Intern
+  ###### Duration : Aug 2022 - Oct 2023
+  • Developed responsive user interfaces using React and Laravel, improving user engagement and streamlining invoice
+management.<br/>
+• Contributed to the frontend development of a GST management system for a major Indian airline using Angular,
+focusing on accurate and efficient tax reporting. <br/>
+• Led a team of two developers on the GeeKay Certificate Application (React + Laravel), implementing pagination and
+dynamic forms to reduce user task time by 50%. <br/>
 </work>
 
 ---
